--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,9 +6,10 @@ include(ExternalProject)
 
 ExternalProject_Add(
     microwindows
+    PREFIX ${PROJECT_BINARY_DIR}
     GIT_REPOSITORY https://github.com/Ellis2781/microwindows/
     UPDATE_DISCONNECTED true
-    BUILD_COMMAND make -j${Ncpu}
-    INSTALL_COMMAND make -j${Ncpu} install
+    BUILD_COMMAND make -C ${PROJECT_BINARY_DIR}/src/microwindows/src
+    INSTALL_COMMAND make -C ../microwindows/src
 )
 
