--- a/src/config
+++ b/src/config
@@ -15,7 +15,7 @@
 # Target platform and compilation options
 #
 ####################################################################
-ARCH                     = LINUX-NATIVE
+ARCH                     = NETBSD
 SHAREDLIBS               = N
 SHAREDLINK               = N
 #EXTRAFLAGS               = -Wall -Wno-missing-prototypes
@@ -89,10 +89,10 @@ HAVE_FILEIO              = Y
 ####################################################################
 # BMP, GIF reading support
 ####################################################################
-HAVE_BMP_SUPPORT         = Y
-HAVE_GIF_SUPPORT         = Y
-HAVE_PNM_SUPPORT         = Y
-HAVE_XPM_SUPPORT         = Y
+HAVE_BMP_SUPPORT         = N
+HAVE_GIF_SUPPORT         = N
+HAVE_PNM_SUPPORT         = N
+HAVE_XPM_SUPPORT         = N
 
 ####################################################################
 # JPEG support through libjpeg, see README.txt in contrib/jpeg
@@ -104,7 +104,7 @@ LIBJPEG                  = -ljpeg
 ####################################################################
 # PNG support via libpng and libz
 ####################################################################
-HAVE_PNG_SUPPORT         = Y
+HAVE_PNG_SUPPORT         = N
 INCPNG                   =
 LIBPNG                   = -lpng
 INCZ                     =
@@ -120,14 +120,14 @@ LIBTIFF                  = -ltiff
 ####################################################################
 # PCF font support - .pcf/.pcf.gz loadable fonts
 ####################################################################
-HAVE_PCF_SUPPORT         = Y
-HAVE_PCFGZ_SUPPORT       = Y
+HAVE_PCF_SUPPORT         = N
+HAVE_PCFGZ_SUPPORT       = N
 PCF_FONT_DIR             = "fonts/pcf"
 
 ####################################################################
 # Truetype fonts - .ttf and .otf loadable fonts thru Freetype 2.x
 ####################################################################
-HAVE_FREETYPE_2_SUPPORT  = Y
+HAVE_FREETYPE_2_SUPPORT  = N
 HAVE_HARFBUZZ_SUPPORT    = N
 INCFT2LIB                = /usr/include
 LIBFT2LIB                = -lfreetype
