--- a/src/config
+++ b/src/config
@@ -59,7 +59,7 @@ TINYWIDGETS              = N
 FBEMULATOR               = N
 MICROWINDEMO             = N
 MICROWINMULTIAPP         = N
-NANOXDEMO                = N
+NANOXDEMO                = Y
 HAVE_VNCSERVER_SUPPORT   = N
 VNCSERVER_PTHREADED      = N
 LIBVNC                   = -lvncserver
