--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,15 +13,17 @@ ExternalProject_Add(
     INSTALL_COMMAND make -C ../microwindows/src
 )
 
-add_library(nano-X STATIC IMPORTED)
+add_library(libnano-X STATIC IMPORTED)
 add_library(mwimages STATIC IMPORTED)
 add_library(mwin STATIC IMPORTED)
 
 
-set_target_properties(nano-X PROPERTIES IMPORTED_LOCATION ${PROJECT_BINARY_DIR}/src/microwindows/src/lib/libnano-X.a)
+set_target_properties(libnano-X PROPERTIES IMPORTED_LOCATION ${PROJECT_BINARY_DIR}/src/microwindows/src/lib/libnano-X.a)
 set_target_properties(mwimages PROPERTIES IMPORTED_LOCATION ${PROJECT_BINARY_DIR}/src/microwindows/src/lib/libmwimages.a)
 set_target_properties(mwin PROPERTIES IMPORTED_LOCATION ${PROJECT_BINARY_DIR}/src/microwindows/src/lib/libmwin.a)
 
-target_link_libraries(nano-X INTERFACE muslc)
+target_link_libraries(libnano-X INTERFACE muslc)
 target_link_libraries(mwimages INTERFACE muslc)
 target_link_libraries(mwin INTERFACE muslc) 
+
+add_executable(nano-X IMPORTED ${PROJECT_BINARY_DIR}/src/microwindows/src/bin/nano-X)
